[project]
name = "dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "naveenkumarreddypemmana", email = "naveenkumarreddypemmana@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dsa = "dsa:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
